--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -1,403 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+.results {
+    margin-bottom: 20px;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/*------ CLEARFIX ------*/
-.clear:before,
-.clear:after {
-    display: table;
-    content: " ";
-}
-.clear:after {
-    clear: both;
-}
-
-/*------ GLOBAL STYLES ------*/
-@font-face {
-    font-family: Plainwalker;
-    src: url("../fonts/Planewalker.otf");
-}
-body {
-    background-color: #eaeaea;
-    font-family: Verdana, Arial, sans-serif;
-    font-size: 95%;
-}
-h1, h2, h3, h4, h5 {
-    font-family: Plainwalker, serif;
-    margin-bottom: .25em;
-}
-h2, h3, h4, h5 {
-    color: #332600;
-}
-h1 {
-    font-size: 2.25em;
-    text-shadow: 2px 2px 1px #332600;
-}
-h2 {
-    border-bottom: 1px solid #332600;
-    font-size: 1.999em;    
-    padding-bottom: 1%;
-}
-h3 {
-    border-bottom: 1px solid #332600;
-    font-size: 1.414em;
-}
-h4 {
-    font-size:  1em;
-    font-weight: bold;
-}
-h5 {
-    font-size: .95em;
-}
-a:link {
-    color: #b97c66;
-}
-a:visited {
-    color: #b97c66;
-}
-a:hover {
-    text-decoration: none;
-}
-p {
-    margin-bottom: 1em;
-}
-#wrapper {
-    background-color: #ffffff;
-    box-shadow: 0 0 3px #aaaaaa;
-    color: #333333;
-    margin: 0 2%;
-}
-header {
-    background-image: url("../img/banner-wide.jpg");
-    background-repeat: no-repeat;
-    color: #ffffff;
-}
-header h1 {
-    margin-bottom: 0;
-    text-align: center;
-}
-nav {
-    margin-bottom: 30px;
-}
-nav li {
-    display: inline;
-    text-align: center;
-}
-nav a {
-    background-color: #1B384C;
-    display: inline-block;
-    margin-right: 1%;
-    margin-bottom: 1%;
-    padding: 2% 0;
-    text-decoration: none;
-    width: 32.66%;
-}
-nav a:link {
-    color: #eaeaea;
-}
-nav a:visited {
-    color: #eaeaea;
-}
-nav a:hover {
-    background-color: white;
-    color: #456277;
-}
-nav li:nth-child(0n+3) a,
-nav li:last-of-type a {
-    margin-right: 0;
-}
-main, aside {
-    margin-bottom: 30px;
-    padding: 0 2%;
-}
-main ul {
-    font-size: 90%;
-    margin-bottom: 1em;
-}
-main li {
-    margin-left: 2em;
-    list-style-type: disc;
-}
-aside p {
-    font-size: .90em;
-}
-.sidenav {
-    display: none;
-}
-#game_updates, #latest_news {
-    display: none;
-}
-.frame_container {
-    height: 0;
-    margin-bottom: 30px;
-    overflow: hidden;
-    padding-bottom: 56.25%;
-    position: relative;
-}
-.frame_container iframe {
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top:0;
-      width: 100%;
-}
-img {
-    height: auto;
-    margin-bottom: 30px;
-    max-width: 100%;
-}
-img.mobile-center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-footer {
-    background-color: #021421;
-    color: #eaeaea;
-    font-size: 80%;
-    padding: 2% 0;
-    text-align: center;
-}
-strong {
-    font-weight: bold;
-}
-abbr {
-    border-bottom: 1px dotted #333333;
-}
-label {
-    display: block;
-    margin-bottom: 5px;
-}
-#checkLabel {
-    display: inline-block;
-    margin-bottom: 30px;
-}
-input:not([type="submit"]):not([type="checkbox"]), textarea {
-    padding: 1%;
-    margin-bottom: 5px;
-    width: 98%;
-}
-input[type="submit"] {
-    display: block;
-    height: 30px;
-    margin: 0 auto;
-    width: 100px;
-}
-
-@media only screen and (min-width:768px) {
-    h1 {
-    font-size: 3.998em;
-    }
-    /*------ CLASSES PAGE STYLES ------*/
-    main.right {
-        float: right;
-    }
-    .sidenav {
-        display: block;
-        font-size: 95%;
-        text-align: center;
-    }
-    .sidenav li {
-        background-color: #456277;
-        margin-bottom: 1px;
-    }
-    .sidenav a {
-        display: block;
-        padding: 10px 0;
-        text-decoration: none;
-    }
-    .sidenav a:link {
-        color: #eaeaea;
-    }
-    .sidenav a:visited {
-        color: #eaeaea;
-    }
-    .sidenav a:hover {
-        background-color: #2d485b;
-        text-decoration: none;
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-    /*------ GLOBAL STYLES ------*/
-    body {
-        font-size: 100%;
-    }
-    nav a {
-        margin-right: 1%;
-        width: 15.833%;
-    }
-    nav li:nth-child(0n+3) a {
-        margin-right: 1%;
-        width: 15.84%;
-    }
-    .cols_2_main {
-        padding: 0 2%;
-        width: 62%;
-    }
-    .cols_2_aside {
-        float: left;
-        padding: 0 2%;
-        width: 30%;
-    }
-    #mobile-sidenav {
-        display: none;
-    }
-
-    /*------ HOME PAGE STYLES ------*/
-    #game_updates, #latest_news {
-        display: block;
-        float: right;
-        padding: 0 2%;
-        width: 36%;
-    }
-    main {
-        float: left;
-        padding: 0 2%;
-        width: 56%;
-    }
-    footer {
-        clear: both;
-    }
-
-    /*------ ROLES PAGE STYLES ------*/
-    img.mobile-center {
-        display: inline;
-        float: right;
-        padding: 0 0 20px 20px;
-    }
-}
-
-@media only screen and (min-width: 1025px) {
-    /*------ GLOBAL STYLES ------*/
-    #wrapper {
-        padding: 0;
-    }
-    header {
-        height: 150px;
-    }
-    header h1 {
-        line-height: 150px;
-    }
-    body {
-        font-size: 100%;
-    }
-    nav li {
-        border-right: 1px solid white;
-    }
-    nav li:last-child {
-        border-right: none;
-    }
-    nav a {
-        margin-right: 0;
-        width: 16.58%;
-    }
-    nav li:last-child a {
-        width: 16.68%;
-    }
-    nav li:nth-child(0n+3) a{
-        margin-right: 0;
-    }
-    #mobile-sidenav {
-        display: none;
-    }
-        img.mobile-center {
-        display: inline;
-        float: right;
-        padding: 0 0 20px 20px;
-    }
-    
-    /*------ HOME PAGE STYLES ------*/
-    #wrapper {
-        margin: 0 auto;
-        max-width: 1200px;
-        width: 98%;
-    }
-    #game_updates, #latest_news {
-        display: block;
-    }
-    #game_updates {
-        float: left;
-        padding: 0 2%;
-        width: 18%;
-    }
-    main {
-        float: left;
-        padding: 0 2%;
-        width: 52%;
-    }
-    .cols_2_main {
-        padding: 0 2%;
-        width: 62%;
-    }
-    .cols_2_aside {
-        float: left;
-        padding: 0 2%;
-        width: 30%;
-    }
-    #latest_news {
-        float: right;
-        padding: 0 2%;
-        width: 18%;
-    }
-
-    /*------ CLASSES PAGE STYLES ------*/
-    .sidenav {
-        top: 40%;
-    }
-    footer {
-        clear: both;
-    }
-}
-
-@media only screen and (min-width:1025px) and (max-width: 1218px) {
-    nav li:last-child a {
-        width: 16.6%;
-    }
-}
-
